# WaveDigitalFilters

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
BBDDelay/: CMakeLists.txt  README.md
BBDDelay/src/: BucketBrigadeWDF.h  PluginProcessor.cpp  PluginProcessor.h
BaxandallEQ/: BaxandallEQ.jucer  CMakeLists.txt
BaxandallEQ/Source/: BaxandallBass.h  BaxandallTreble.h  PluginProcessor.cpp  PluginProcessor.h
BaxandallEQ/src/: BaxandallBass.h  BaxandallTreble.h  BaxandallWDF.cpp  BaxandallWDF.h  BaxandallWDFAdapt.cpp  BaxandallWDFAdapt.h  PluginProcessor.cpp  PluginProcessor.h
CurrentDivider/: CMakeLists.txt  CurrentDivider.jucer  README.md  schematic.py
CurrentDivider/Source/: CurrentDivider.h  PluginProcessor.cpp  PluginProcessor.h
CurrentDivider/src/: CurrentDivider.h  PluginProcessor.cpp  PluginProcessor.h
DiodeClipper/: CMakeLists.txt  DiodeClipper.jucer  README.md  schematic.py
DiodeClipper/Source/: DiodeClipper.h  PluginProcessor.cpp  PluginProcessor.h
DiodeClipper/src/: DiodeClipper.h  PluginProcessor.cpp  PluginProcessor.h
LCOscillator/: CMakeLists.txt  LCOscillator.jucer  README.md  schematic.py
LCOscillator/Source/: LCOscillator.h  PluginProcessor.cpp  PluginProcessor.h
LCOscillator/src/: LCOscillator.h  PluginProcessor.cpp  PluginProcessor.h
PassiveLPF/: CMakeLists.txt  PassiveLPF.jucer  README.md  schematic.py
PassiveLPF/Source/: PassiveLPF.h  PluginProcessor.cpp  PluginProcessor.h
PassiveLPF/src/: PassiveLPF.h  PluginProcessor.cpp  PluginProcessor.h
SallenKeyFilter/: CMakeLists.txt
SallenKeyFilter/src/: PluginProcessor.cpp  PluginProcessor.h  SallenKeyLPFWDF.cpp  SallenKeyLPFWDF.h
TR_808/: CMakeLists.txt  README.md
TR_808/HatResonator/: CMakeLists.txt
TR_808/OutputFilter/: CMakeLists.txt  OutputFilter.jucer
TR_808/PulseShaper/: CMakeLists.txt  PulseShaper.jucer
TR_808/SnareResonator/: CMakeLists.txt
VoltageDivider/: CMakeLists.txt  README.md  VoltageDivider.jucer  schematic.py
VoltageDivider/Source/: PluginProcessor.cpp  PluginProcessor.h  (+1 more)
WDFPrototyper/: CMakeLists.txt  WDFPrototyper.jucer
cmake/: Juce.cmake  chowdsp_utils.cmake  chowdsp_wdf.cmake
modules/: CMakeLists.txt
modules/cmake/: CreateWDFPlugin.cmake
shared/: omega.h  wdf.h
(+180 files in other folders)
